--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "SADAKO",
+  "name": "Portfolio",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -17,7 +17,21 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "styles.sass",
+      "imports": [
+        "fonts.sass",
+        "me.sass"
+      ]
+    },
+    {
+      "path": "index.pug",
+      "imports": [
+        "mixins.pug"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "settings"
   },
@@ -60,7 +74,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
